# ai-avatar

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  visemes_audio_generator.py
api/: LLM.ts  PALM.ts
components/Zippy/: Visemes.tsx  ZippyAvatar.tsx
components/avatar/: Visemes.tsx  ZippyAvatar.tsx
components/icons/: InformationCircle.tsx  PaperAirplane.tsx
constants/: personality.tsx
context/: personality.tsx
hooks/: useSpeechSynthesis.ts
icons/: paper-airplane.tsx
pages/: _app.tsx  index.tsx
pages/api/: PALM.ts  azureTTS.ts  openai.ts  server.ts
public/: viseme.json  visemes.json
public/images/: architecture.drawio
utils/: playAudio.ts
